fix sliding -- browser behavior changed

--- a/index.styl
+++ b/index.styl
@@ -39,7 +39,7 @@ body
 		color darken(color-bottom, 25%)
 		// font-family 'Shadows Into Light', cursive
 		// color color-pen
-		// font-size 1.3em		
+		// font-size 1.3em
 
 #projects
 	margin 4em auto 1em
@@ -81,6 +81,7 @@ body
 				color color-pen
 				font-size 1.3em
 				position relative
+				right 0
 				transition right 0.2s
 				padding 0.2em 1.2em 0.2em 8em
 			&:nth-child(-n+4) a
@@ -89,6 +90,7 @@ body
 					right 1em
 			&:nth-child(0n+5) a
 			&:nth-child(0n+6) a
+				left 0
 				transition left 0.2s
 				&:hover
 					left 1em
