--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@ body {
   color: #136;
   font-size: 1.3em;
   position: relative;
+  right: 0;
   -moz-transition: right 0.2s;
   -o-transition: right 0.2s;
   -webkit-transition: right 0.2s;
@@ -76,6 +77,7 @@ body {
 }
 #projects ul li:nth-child(0n+5) a,
 #projects ul li:nth-child(0n+6) a {
+  left: 0;
   -moz-transition: left 0.2s;
   -o-transition: left 0.2s;
   -webkit-transition: left 0.2s;
@@ -121,3 +123,4 @@ body {
   -webkit-transform: translate(0, -1em) rotate(30deg);
   transform: translate(0, -1em) rotate(30deg);
 }
+
